--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylsheet" href="style.css">
     </head>
     <body>
-   
+      
+        <nav>
+         <a href="#">Home</a>
+         <a href="#">About Me</a>
+         <a href="#">Music</a></nav>
     </body>
 </html>
